# CGProject

./: .gitignore  2dCluster.cpp  2dCluster.h  CMakeLists.txt  CMakePresets.json  FaceInfo.h  README.md  draw_histograms.py  example.cpp  main.cpp  move_files.py  script.py  test.cpp
